Fixed title on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,6 @@ html {
 :target:before {
   content: '';
   display: block;
-  height: 6em;
-  margin: -6em 0 0;
-}
-
-@media screen and (max-width: 1024px) {
-  :target:before {
-    content: '';
-    display: block;
-    height: 5em;
-    margin: -5em 0 0;
-  }
+  height: 5em;
+  margin: -5em 0 0;
 }
